Add Amount to Journal and Default currency to Workplace
